examples/test/testpolicy18770.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18770
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key14: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value45
          key19: value27
          key10: value6
      podSelector:
        matchLabels:
          key48: value23
          key43: value35
